[workspace]

[package]
name    = "hc-isy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-isy"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = "0.24"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rumqttc            = "0.24"
quick-xml          = "0.36"
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
flate2             = "1"
chrono             = "0.4"
toml               = "0.8"
base64             = "0.22"
