[package]
name        = "hc-isy"
version     = "0.1.2"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "ISY/IoX (Insteon + Z-Wave) plugin for homeCore"
repository  = "https://github.com/homeCore-io/hc-isy"

[[bin]]
name = "hc-isy"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { git = "https://github.com/homeCore-io/hc-plugin-sdk-rs", branch = "main" }
hc-logging         = { git = "https://github.com/homeCore-io/homeCore", branch = "main" }
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = "0.24"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml          = "0.36"
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
flate2             = "1"
chrono             = "0.4"
toml               = "0.8"
base64             = "0.22"
